TaskManagementSystem/client/src/assets/styles/index.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(0, 0, 0, 0.87);
  background-color: #F4F1E7;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  margin-right: 10px;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1BA098;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}

.slideshow-container {
  width: 100%;
  max-width: 600px;
  margin: 0 auto 20px auto;
}

.each-slide .image-container {
  width: 100%;
  height: 0;
  padding-bottom: 56.25%;
  position: relative;
}

.each-slide .image-container img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.react-slideshow-container .nav {
  top: 50%;
  transform: translateY(-50%);
  position: absolute;
  width: auto;
  padding: 10px;
  cursor: pointer;
  z-index: 10;
  background-color: rgba(0, 0, 0, 0.5);
  color: white;
  border: none;
}

.react-slideshow-container .nav:hover {
  background-color: rgba(0, 0, 0, 0.8);
}

.react-slideshow-container .nav.prev {
  left: -50px;
}

.react-slideshow-container .nav.next {
  right: -50px;
}

